--- a/vignettes/refs.bib
+++ b/vignettes/refs.bib
@@ -658,32 +658,32 @@
 
 
 @Manual{uGMAR,
-    title = {uGMAR: Estimate Univariate Gaussian or Student's $t$ Mixture Autoregressive Model},
+    title = {uGMAR: Estimate Univariate Gaussian And Student's $t$ Mixture Autoregressive Models},
     author = {S. Virolainen},
     year = {2018},
-    note = {R package version 3.4.0 available at CRAN: \url{https://CRAN.R-project.org/package=uGMAR}},
+    note = {R package version 3.4.1 available at CRAN: \url{https://CRAN.R-project.org/package=uGMAR}},
     url = {https://CRAN.R-project.org/package=uGMAR},
 }
 
 @Manual{gmvarkit,
-    title = {gmvarkit: Estimate Gaussian Mixture Vector Autoregressive Model},
+    title = {gmvarkit: Estimate Gaussian And Student's $t$ Mixture Vector Autoregressive Models},
     author = {S. Virolainen},
     year = {2018},
-    note = {R package version 1.5.0 available at CRAN: \url{https://CRAN.R-project.org/package=gmvarkit}},
+    note = {R package version 2.0.2 available at CRAN: \url{https://CRAN.R-project.org/package=gmvarkit}},
     url = {https://CRAN.R-project.org/package=gmvarkit},
 }
 
 @Manual{gmvarkitnormal,
-    title = {gmvarkit: Estimate Gaussian Mixture Vector Autoregressive Model},
+    title = {gmvarkit: Estimate Gaussian And Student's $t$ Mixture Vector Autoregressive Models},
     author = {S. Virolainen},
-    year = {2021},
-    note = {R package version 1.4.2, available at CRAN: \url{https://CRAN.R-project.org/package=gmvarkit}},
+    year = {2018},
+    note = {R package version 2.0.2, available at CRAN: \url{https://CRAN.R-project.org/package=gmvarkit}},
     url = {https://CRAN.R-project.org/package=gmvarkit},
 }
 
 @Article{Virolainen:2020,
   author = {S. Virolainen},
-  title = {Structural Gaussian Mixture Vector Autoregressive Model},
+  title = {Structural Gaussian Mixture Vector Autoregressive Model with Application to the Asymmetric Effects of Monetary Policy Shocks},
   year = {2021},
   journal = {Unpublished working paper, available as arXiv:2007.04713},
   url = {https://arxiv.org/abs/2007.04713},
