--- a/vignettes/gmvarkit-vignette.tex
+++ b/vignettes/gmvarkit-vignette.tex
@@ -1,9 +1,15 @@
 \documentclass[nojss]{jss}
 
 %% -- LaTeX packages and custom commands ---------------------------------------
+%\VignetteIndexEntry{gmvarkit: A Family of Mixture Vector Autoregressive Models in R}
+
+%% FOR SWEAVE (if used)
+%% setwd("/Users/savi/Documents/gmvarkit/vignettes")
+%% Sweave("gmvarkit-vignette.Rnw")
+%% tools::texi2pdf("gmvarkit.tex")
 
 %% recommended packages
-\usepackage{orcidlink,thumbpdf,lmodern}
+\usepackage{thumbpdf, lmodern}
 
 %% Packages added by the author
 \usepackage{amsmath} % \align, etc.
