--- a/vignettes/refs.bib
+++ b/vignettes/refs.bib
@@ -658,7 +658,7 @@
 
 
 @Manual{uGMAR,
-    title = {uGMAR: Estimate Univariate Gaussian And Student's $t$ Mixture Autoregressive Models},
+    title = {uGMAR: Estimate Univariate Gaussian and Student's $t$ Mixture Autoregressive Models},
     author = {S. Virolainen},
     year = {2018},
     note = {R package version 3.4.1 available at CRAN: \url{https://CRAN.R-project.org/package=uGMAR}},
@@ -666,7 +666,7 @@
 }
 
 @Manual{gmvarkit,
-    title = {gmvarkit: Estimate Gaussian And Student's $t$ Mixture Vector Autoregressive Models},
+    title = {gmvarkit: Estimate Gaussian and Student's $t$ Mixture Vector Autoregressive Models},
     author = {S. Virolainen},
     year = {2018},
     note = {R package version 2.0.2 available at CRAN: \url{https://CRAN.R-project.org/package=gmvarkit}},
@@ -674,7 +674,7 @@
 }
 
 @Manual{gmvarkitnormal,
-    title = {gmvarkit: Estimate Gaussian And Student's $t$ Mixture Vector Autoregressive Models},
+    title = {gmvarkit: Estimate Gaussian and Student's $t$ Mixture Vector Autoregressive Models},
     author = {S. Virolainen},
     year = {2018},
     note = {R package version 2.0.2, available at CRAN: \url{https://CRAN.R-project.org/package=gmvarkit}},
