--- a/README.Rmd
+++ b/README.Rmd
@@ -49,19 +49,20 @@ data(gdpdef, package="gmvarkit")
 ## Reduced form GMVAR model ##
 
 # Estimate a GMVAR(2, 2) model: 20 estimation rounds and seeds for reproducible results
-# (note: many empirical applications require more estimation rounds, e.g., hundreds).
-fit <- fitGMVAR(gdpdef, p=2, M=2, ncalls=20, seeds=1:20, ncores=4)
+# (note: many empirical applications require more estimation rounds, e.g., hundreds
+# or thousands).
+fit <- fitGMVAR(gdpdef, p=2, M=2, ncalls=20, seeds=1:20, ncores=2)
 fit
 
 # Estimate a GMVAR(2, 2) model with autoregressive parameters restricted to be the same for all regimes
 C_mat <- rbind(diag(2*2^2), diag(2*2^2))
-fitc <- fitGMVAR(gdpdef, p=2, M=2, constraints=C_mat, ncalls=20, seeds=1:20, ncores=4)
+fitc <- fitGMVAR(gdpdef, p=2, M=2, constraints=C_mat, ncalls=20, seeds=1:20, ncores=2)
 fitc
 
 # Estimate a GMVAR(2, 2) model with autoregressive parameters and the unconditional means
 # restricted to be the same in both regimes (only the covariance matrix varies)
 fitcm <- fitGMVAR(gdpdef, p=2, M=2, parametrization="mean", constraints=C_mat, same_means=list(1:2),
-                  ncalls=20, seeds=1:20, ncores=4)
+                  ncalls=20, seeds=1:20, ncores=2)
 fitcm 
 
 # Test the above constraints on the AR parameters with likelihood ratio test:
@@ -95,7 +96,7 @@ predict(fit, n_ahead=12)
 # Estimate structural GMVAR(2,2) model identified with sign constraints:
 W22 <- matrix(c(1, 1, -1, 1), nrow=2, byrow=FALSE)
 fit22s <- fitGMVAR(gdpdef, p=2, M=2, structural_pars=list(W=W22),
-                   ncalls=20, seeds=1:20, ncores=4)
+                   ncalls=20, seeds=1:20, ncores=2)
 fit22s
 
 # Alternatively, if there are two regimes (M=2), a stuctural model can 
@@ -122,25 +123,25 @@ all.equal(fit22s$loglik, fit22s_4$loglik)
 
 # Estimate generalized impulse response function (GIRF) with starting values
 # generated from the stationary distribution of the process:
-girf1 <- GIRF(fit22s, N=20, ci=c(0.95, 0.8), R1=200, R2=200, ncores=4)
+girf1 <- GIRF(fit22s, N=20, ci=c(0.95, 0.8), R1=200, R2=200, ncores=2)
 
 # Estimate GIRF with starting values generated from the stationary distribution
 # of the first regime:
-girf2 <- GIRF(fit22s, N=20, ci=c(0.95, 0.8), init_regimes=1, R1=200, R2=200, ncores=4)
+girf2 <- GIRF(fit22s, N=20, ci=c(0.95, 0.8), init_regimes=1, R1=200, R2=200, ncores=2)
 
 # Estimate GIRF with starting values given by the last p observations of the
 # data:
-girf3 <- GIRF(fit22s, N=20, init_values=fit22s$data, R1=1000, ncores=4)
+girf3 <- GIRF(fit22s, N=20, init_values=fit22s$data, R1=1000, ncores=2)
 
 # Estimate generalized forecast error variance decmposition (GFEVD) with the
 # initial values being all possible lenght p the histories in the data:
-gfevd1 <- GFEVD(fit22s, N=20, R1=100, initval_type="data", ncores=4)
+gfevd1 <- GFEVD(fit22s, N=20, R1=100, initval_type="data", ncores=2)
 plot(gfevd1)
 
 # Estimate GFEVD with the initial values generated from the stationary
 # distribution of the second regime:
 gfevd2 <- GFEVD(fit22s, N=20, R1=100, R2=100, initval_type="random",
-                init_regimes=2, ncores=4)
+                init_regimes=2, ncores=2)
 plot(gfevd2)
 
 # Estimate GFEVD with fixed starting values that are the unconditional mean
@@ -148,7 +149,7 @@ plot(gfevd2)
 myvals <- rbind(fit22s$uncond_moments$uncond_mean,
                 fit22s$uncond_moments$uncond_mean)
 gfevd3 <- GFEVD(fit22s, N=48, R1=250, initval_type="fixed",
-                init_values=myvals, ncores=4)
+                init_values=myvals, ncores=2)
 plot(gfevd3)
 
 # Test with Wald test whether the diagonal elements of the first AR coefficient
